--- a/Greeting_card/Greeting_card/Greeting_card.csproj
+++ b/Greeting_card/Greeting_card/Greeting_card.csproj
@@ -94,6 +94,14 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="GreetingCardMaker_version9\GreetingCard.aspx" />
+    <Content Include="GreetingCardMaker_version6\greetingcard.aspx" />
+    <Content Include="GreetingCardMaker_version6\GreetingCardMaker_verion6.aspx" />
+    <Content Include="GreetingCardMaker_version7\GreetingCardMaker_version7.aspx" />
+    <Content Include="GreetingCardMaker_version7\Greeting_card.aspx" />
+    <Content Include="GreetingCardMaker_version8\GreetingCardMaker_version8.aspx" />
+    <Content Include="GreetingCardMaker_version8\greetingcardpage.aspx" />
+    <Content Include="GreetingCardMaker_version9\GreetingCardMaker_version9.aspx" />
     <Content Include="packages.config" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -115,6 +123,27 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GreetingCardMaker_version9\GreetingCard.aspx.cs">
+      <DependentUpon>GreetingCard.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="GreetingCardMaker_version9\GreetingCard.aspx.designer.cs">
+      <DependentUpon>GreetingCard.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="GreetingCardMaker_version6\greetingcard.aspx.cs">
+      <DependentUpon>greetingcard.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="GreetingCardMaker_version6\greetingcard.aspx.designer.cs">
+      <DependentUpon>greetingcard.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="GreetingCardMaker_version6\GreetingCardMaker_verion6.aspx.cs">
+      <DependentUpon>GreetingCardMaker_verion6.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="GreetingCardMaker_version6\GreetingCardMaker_verion6.aspx.designer.cs">
+      <DependentUpon>GreetingCardMaker_verion6.aspx</DependentUpon>
+    </Compile>
     <Compile Include="GreetingCardMaker_version3.aspx.cs">
       <DependentUpon>GreetingCardMaker_version3.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -136,8 +165,44 @@
     <Compile Include="GreetingCardMaker_version5.aspx.designer.cs">
       <DependentUpon>GreetingCardMaker_version5.aspx</DependentUpon>
     </Compile>
+    <Compile Include="GreetingCardMaker_version7\GreetingCardMaker_version7.aspx.cs">
+      <DependentUpon>GreetingCardMaker_version7.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="GreetingCardMaker_version7\GreetingCardMaker_version7.aspx.designer.cs">
+      <DependentUpon>GreetingCardMaker_version7.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="GreetingCardMaker_version7\Greeting_card.aspx.cs">
+      <DependentUpon>Greeting_card.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="GreetingCardMaker_version7\Greeting_card.aspx.designer.cs">
+      <DependentUpon>Greeting_card.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="GreetingCardMaker_version8\GreetingCardMaker_version8.aspx.cs">
+      <DependentUpon>GreetingCardMaker_version8.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="GreetingCardMaker_version8\GreetingCardMaker_version8.aspx.designer.cs">
+      <DependentUpon>GreetingCardMaker_version8.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="GreetingCardMaker_version8\greetingcardpage.aspx.cs">
+      <DependentUpon>greetingcardpage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="GreetingCardMaker_version8\greetingcardpage.aspx.designer.cs">
+      <DependentUpon>greetingcardpage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="GreetingCardMaker_version9\GreetingCardMaker_version9.aspx.cs">
+      <DependentUpon>GreetingCardMaker_version9.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="GreetingCardMaker_version9\GreetingCardMaker_version9.aspx.designer.cs">
+      <DependentUpon>GreetingCardMaker_version9.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
