--- a/WebApplication1/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1/WebApplication1.csproj
@@ -146,6 +146,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version6\greetingcard.aspx" />
+    <Content Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version6\GreetingCardMaker_verion6.aspx" />
+    <Content Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version6\image\default.jpg" />
+    <Content Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version7\GreetingCardMaker_version7.aspx" />
+    <Content Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version7\Greeting_card.aspx" />
+    <Content Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version7\image\default.jpg" />
+    <Content Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version8\GreetingCardMaker_version8.aspx" />
+    <Content Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version8\greetingcardpage.aspx" />
+    <Content Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version8\image\default.jpg" />
+    <Content Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version9\GreetingCard.aspx" />
+    <Content Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version9\GreetingCardMaker_version9.aspx" />
+    <Content Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version9\image\default.jpg" />
     <Content Include="Account\Confirm.aspx" />
     <Content Include="Account\Forgot.aspx" />
     <Content Include="Account\Login.aspx" />
@@ -155,12 +167,11 @@
     <Content Include="Account\RegisterExternalLogin.aspx" />
     <Content Include="Account\ResetPassword.aspx" />
     <Content Include="Account\ResetPasswordConfirmation.aspx" />
-    <Content Include=".chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_versio2.aspx" />
-    <Content Include=".chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version1.aspx" />
-    <Content Include=".chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version3.aspx" />
-    <Content Include=".chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version4.aspx" />
-    <Content Include=".chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version5.aspx" />
-    <Content Include="CE_138_Varun_shah\V1.aspx" />
+    <Content Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_versio2.aspx" />
+    <Content Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version1.aspx" />
+    <Content Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version3.aspx" />
+    <Content Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version4.aspx" />
+    <Content Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version5.aspx" />
     <Content Include="CE_138_Varun_shah\V2.aspx" />
     <Content Include="CE_138_Varun_shah\V3.aspx" />
     <Content Include="CE_138_Varun_shah\V4.aspx" />
@@ -227,6 +238,62 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version6\greetingcard.aspx.cs">
+      <DependentUpon>greetingcard.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version6\greetingcard.aspx.designer.cs">
+      <DependentUpon>greetingcard.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version6\GreetingCardMaker_verion6.aspx.cs">
+      <DependentUpon>GreetingCardMaker_verion6.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version6\GreetingCardMaker_verion6.aspx.designer.cs">
+      <DependentUpon>GreetingCardMaker_verion6.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version7\GreetingCardMaker_version7.aspx.cs">
+      <DependentUpon>GreetingCardMaker_version7.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version7\GreetingCardMaker_version7.aspx.designer.cs">
+      <DependentUpon>GreetingCardMaker_version7.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version7\Greeting_card.aspx.cs">
+      <DependentUpon>Greeting_card.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version7\Greeting_card.aspx.designer.cs">
+      <DependentUpon>Greeting_card.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version8\GreetingCardMaker_version8.aspx.cs">
+      <DependentUpon>GreetingCardMaker_version8.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version8\GreetingCardMaker_version8.aspx.designer.cs">
+      <DependentUpon>GreetingCardMaker_version8.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version8\greetingcardpage.aspx.cs">
+      <DependentUpon>greetingcardpage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version8\greetingcardpage.aspx.designer.cs">
+      <DependentUpon>greetingcardpage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version9\GreetingCard.aspx.cs">
+      <DependentUpon>GreetingCard.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version9\GreetingCard.aspx.designer.cs">
+      <DependentUpon>GreetingCard.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version9\GreetingCardMaker_version9.aspx.cs">
+      <DependentUpon>GreetingCardMaker_version9.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version9\GreetingCardMaker_version9.aspx.designer.cs">
+      <DependentUpon>GreetingCardMaker_version9.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Account\Confirm.aspx.cs">
       <DependentUpon>Confirm.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -294,47 +361,40 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
-    <Compile Include=".chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_versio2.aspx.cs">
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_versio2.aspx.cs">
       <DependentUpon>GreetingCardMaker_versio2.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include=".chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_versio2.aspx.designer.cs">
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_versio2.aspx.designer.cs">
       <DependentUpon>GreetingCardMaker_versio2.aspx</DependentUpon>
     </Compile>
-    <Compile Include=".chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version1.aspx.cs">
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version1.aspx.cs">
       <DependentUpon>GreetingCardMaker_version1.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include=".chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version1.aspx.designer.cs">
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version1.aspx.designer.cs">
       <DependentUpon>GreetingCardMaker_version1.aspx</DependentUpon>
     </Compile>
-    <Compile Include=".chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version3.aspx.cs">
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version3.aspx.cs">
       <DependentUpon>GreetingCardMaker_version3.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include=".chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version3.aspx.designer.cs">
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version3.aspx.designer.cs">
       <DependentUpon>GreetingCardMaker_version3.aspx</DependentUpon>
     </Compile>
-    <Compile Include=".chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version4.aspx.cs">
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version4.aspx.cs">
       <DependentUpon>GreetingCardMaker_version4.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include=".chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version4.aspx.designer.cs">
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version4.aspx.designer.cs">
       <DependentUpon>GreetingCardMaker_version4.aspx</DependentUpon>
     </Compile>
-    <Compile Include=".chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version5.aspx.cs">
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version5.aspx.cs">
       <DependentUpon>GreetingCardMaker_version5.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include=".chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version5.aspx.designer.cs">
+    <Compile Include="A.chinmay_solanki_CE127_greetingcardapplications\GreetingCardMaker_version5.aspx.designer.cs">
       <DependentUpon>GreetingCardMaker_version5.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="CE_138_Varun_shah\V1.aspx.cs">
-      <DependentUpon>V1.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="CE_138_Varun_shah\V1.aspx.designer.cs">
-      <DependentUpon>V1.aspx</DependentUpon>
     </Compile>
     <Compile Include="CE_138_Varun_shah\V2.aspx.cs">
       <DependentUpon>V2.aspx</DependentUpon>
